// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading ACT theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-1hnxvz3"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ix3xsb-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-sfoaz6-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-pgzer6-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-1hnxvz3"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ix3xsb-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-sfoaz6-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-18ych1d-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-1hnxvz3"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrcd9-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-sfoaz6-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-g7prxd-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-1hnxvz3"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1i9y6vw-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-sfoaz6-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-g7prxd-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="css-1hnxvz3"
    data-chromatic="ignore"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-13jbgn8-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-sfoaz6-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="MuiTypography-root MuiTypography-overline css-1cqsile-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;
